# news-eda-workshop

./: .env.example  .gitignore  Dockerfile  Dockerfile.topology-ui  README.md  SCAFFOLD.md  WORKSHOP.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: start-rabbitmq.ps1  start-rabbitmq.sh
src/news_eda/: __init__.py  config.py  main_consumer.py  main_producer.py  models.py  topics.py
src/news_eda/patterns/: __init__.py  inbox.py  outbox.py
src/news_eda/services/: __init__.py  consumer.py  faulty_client.py  gemini_client.py  messaging.py  producer.py
src/news_eda/utils/: __init__.py  parsing.py
topology-ui/: index.html  package.json
topology-ui/server/: index.js  package.json
topology-ui/src/: App.jsx  styles.css
