[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy-news-eda"
version = "0.1.0"
description = "Basic Python EDA system for mock fantasy news with Gemini and RabbitMQ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "google-generativeai>=0.8.0",
  "pika>=1.3.2",
  "python-dotenv>=1.0.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
